--- a/dt_mos.plist
+++ b/dt_mos.plist
@@ -17,7 +17,7 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.cattsoft.rn.mos</string>
+				<string>com.cattsoft.rh.mos</string>
 				<key>bundle-version</key>
 				<string>1.0</string>
 				<key>kind</key>
